parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    COMMENT
    TVOID
    VOID

Grammar

Rule 0     S' -> definition_sequence
Rule 1     definition_sequence -> definition definition_sequence
Rule 2     definition_sequence -> definition
Rule 3     definition -> function_declaration
Rule 4     definition -> variable_declaration
Rule 5     variable_declaration -> identifier COLON type SEMICOLON
Rule 6     variable_declaration -> identifier COLON type ASSIGNMENT expression SEMICOLON
Rule 7     function_declaration -> function_heading body
Rule 8     function_declaration -> identifier COLON type LPAREN parameter_list RPAREN SEMICOLON
Rule 9     function_heading -> identifier COLON type LPAREN parameter_list RPAREN
Rule 10    parameter_list -> parameter COMMA parameter_list
Rule 11    parameter_list -> parameter
Rule 12    parameter_list -> <empty>
Rule 13    parameter -> identifier COLON type
Rule 14    statement_part -> LBRACKET statement_sequence RBRACKET
Rule 15    statement_sequence -> statement statement_sequence
Rule 16    statement_sequence -> statement
Rule 17    statement -> statement_part
Rule 18    statement -> local_variable_declaration
Rule 19    statement -> assignment_statement
Rule 20    statement -> array_def
Rule 21    statement -> if_statement
Rule 22    statement -> while_statement
Rule 23    statement -> return_statement
Rule 24    statement -> expression SEMICOLON
Rule 25    statement -> <empty>
Rule 26    body -> statement
Rule 27    param_list -> param COMMA param_list
Rule 28    param_list -> param
Rule 29    param_list -> <empty>
Rule 30    param -> expression
Rule 31    local_variable_declaration -> identifier COLON type ASSIGNMENT expression SEMICOLON
Rule 32    assignment_statement -> identifier ASSIGNMENT expression SEMICOLON
Rule 33    assignment_statement -> identifier LBRACKET_S expression RBRACKET_S ASSIGNMENT expression SEMICOLON
Rule 34    array_def -> identifier COLON type SEMICOLON
Rule 35    if_statement -> IF expression body ELSE body
Rule 36    if_statement -> IF expression body
Rule 37    while_statement -> WHILE expression body
Rule 38    return_statement -> RETURN expression SEMICOLON
Rule 39    expression -> expression_m
Rule 40    expression -> expression and_or expression_m
Rule 41    expression_m -> expression_e
Rule 42    expression_m -> expression_m sign expression_e
Rule 43    and_or -> AND
Rule 44    and_or -> OR
Rule 45    sign -> TIMES
Rule 46    sign -> DIV
Rule 47    sign -> PLUS
Rule 48    sign -> MINUS
Rule 49    sign -> MOD
Rule 50    sign -> EQUAL
Rule 51    sign -> NEQUAL
Rule 52    sign -> LT
Rule 53    sign -> LTE
Rule 54    sign -> GT
Rule 55    sign -> GTE
Rule 56    expression_e -> identifier
Rule 57    expression_e -> integer
Rule 58    expression_e -> float
Rule 59    expression_e -> string
Rule 60    expression_e -> bool
Rule 61    expression_e -> array
Rule 62    expression_e -> LPAREN expression RPAREN
Rule 63    expression_e -> NOT expression
Rule 64    expression_e -> function_call
Rule 65    expression_e -> array_call
Rule 66    function_call -> identifier LPAREN param_list RPAREN
Rule 67    array_call -> identifier LBRACKET_S expression RBRACKET_S
Rule 68    identifier -> IDENTIFIER
Rule 69    integer -> INTEGER
Rule 70    float -> FLOAT
Rule 71    string -> STRING
Rule 72    bool -> BOOL
Rule 73    array -> LBRACKET_S expression RBRACKET_S
Rule 74    type -> TINTEGER
Rule 75    type -> TFLOAT
Rule 76    type -> TSTRING
Rule 77    type -> TBOOL
Rule 78    type -> LBRACKET_S type RBRACKET_S

Terminals, with rules where they appear

AND                  : 43
ARRAY                : 
ASSIGNMENT           : 6 31 32 33
BOOL                 : 72
COLON                : 5 6 8 9 13 31 34
COMMA                : 10 27
COMMENT              : 
DIV                  : 46
ELSE                 : 35
EQUAL                : 50
FLOAT                : 70
GT                   : 54
GTE                  : 55
IDENTIFIER           : 68
IF                   : 35 36
INTEGER              : 69
LBRACKET             : 14
LBRACKET_S           : 33 67 73 78
LPAREN               : 8 9 62 66
LT                   : 52
LTE                  : 53
MINUS                : 48
MOD                  : 49
NEQUAL               : 51
NOT                  : 63
OR                   : 44
PLUS                 : 47
RBRACKET             : 14
RBRACKET_S           : 33 67 73 78
RETURN               : 38
RPAREN               : 8 9 62 66
SEMICOLON            : 5 6 8 24 31 32 33 34 38
STRING               : 71
TBOOL                : 77
TFLOAT               : 75
TIMES                : 45
TINTEGER             : 74
TSTRING              : 76
TVOID                : 
VOID                 : 
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

and_or               : 40
array                : 61
array_call           : 65
array_def            : 20
assignment_statement : 19
body                 : 7 35 35 36 37
bool                 : 60
definition           : 1 2
definition_sequence  : 1 0
expression           : 6 24 30 31 32 33 33 35 36 37 38 40 62 63 67 73
expression_e         : 41 42
expression_m         : 39 40 42
float                : 58
function_call        : 64
function_declaration : 3
function_heading     : 7
identifier           : 5 6 8 9 13 31 32 33 34 56 66 67
if_statement         : 21
integer              : 57
local_variable_declaration : 18
param                : 27 28
param_list           : 27 66
parameter            : 10 11
parameter_list       : 8 9 10
return_statement     : 23
sign                 : 42
statement            : 15 16 26
statement_part       : 17
statement_sequence   : 14 15
string               : 59
type                 : 5 6 8 9 13 31 34 78
variable_declaration : 4
while_statement      : 22

Parsing method: LALR

state 0

    (0) S' -> . definition_sequence
    (1) definition_sequence -> . definition definition_sequence
    (2) definition_sequence -> . definition
    (3) definition -> . function_declaration
    (4) definition -> . variable_declaration
    (7) function_declaration -> . function_heading body
    (8) function_declaration -> . identifier COLON type LPAREN parameter_list RPAREN SEMICOLON
    (5) variable_declaration -> . identifier COLON type SEMICOLON
    (6) variable_declaration -> . identifier COLON type ASSIGNMENT expression SEMICOLON
    (9) function_heading -> . identifier COLON type LPAREN parameter_list RPAREN
    (68) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    definition_sequence            shift and go to state 1
    definition                     shift and go to state 2
    function_declaration           shift and go to state 3
    variable_declaration           shift and go to state 4
    function_heading               shift and go to state 5
    identifier                     shift and go to state 6

state 1

    (0) S' -> definition_sequence .



state 2

    (1) definition_sequence -> definition . definition_sequence
    (2) definition_sequence -> definition .
    (1) definition_sequence -> . definition definition_sequence
    (2) definition_sequence -> . definition
    (3) definition -> . function_declaration
    (4) definition -> . variable_declaration
    (7) function_declaration -> . function_heading body
    (8) function_declaration -> . identifier COLON type LPAREN parameter_list RPAREN SEMICOLON
    (5) variable_declaration -> . identifier COLON type SEMICOLON
    (6) variable_declaration -> . identifier COLON type ASSIGNMENT expression SEMICOLON
    (9) function_heading -> . identifier COLON type LPAREN parameter_list RPAREN
    (68) identifier -> . IDENTIFIER

    $end            reduce using rule 2 (definition_sequence -> definition .)
    IDENTIFIER      shift and go to state 7

    definition                     shift and go to state 2
    definition_sequence            shift and go to state 8
    function_declaration           shift and go to state 3
    variable_declaration           shift and go to state 4
    function_heading               shift and go to state 5
    identifier                     shift and go to state 6

state 3

    (3) definition -> function_declaration .

    IDENTIFIER      reduce using rule 3 (definition -> function_declaration .)
    $end            reduce using rule 3 (definition -> function_declaration .)


state 4

    (4) definition -> variable_declaration .

    IDENTIFIER      reduce using rule 4 (definition -> variable_declaration .)
    $end            reduce using rule 4 (definition -> variable_declaration .)


state 5

    (7) function_declaration -> function_heading . body
    (26) body -> . statement
    (17) statement -> . statement_part
    (18) statement -> . local_variable_declaration
    (19) statement -> . assignment_statement
    (20) statement -> . array_def
    (21) statement -> . if_statement
    (22) statement -> . while_statement
    (23) statement -> . return_statement
    (24) statement -> . expression SEMICOLON
    (25) statement -> .
    (14) statement_part -> . LBRACKET statement_sequence RBRACKET
    (31) local_variable_declaration -> . identifier COLON type ASSIGNMENT expression SEMICOLON
    (32) assignment_statement -> . identifier ASSIGNMENT expression SEMICOLON
    (33) assignment_statement -> . identifier LBRACKET_S expression RBRACKET_S ASSIGNMENT expression SEMICOLON
    (34) array_def -> . identifier COLON type SEMICOLON
    (35) if_statement -> . IF expression body ELSE body
    (36) if_statement -> . IF expression body
    (37) while_statement -> . WHILE expression body
    (38) return_statement -> . RETURN expression SEMICOLON
    (39) expression -> . expression_m
    (40) expression -> . expression and_or expression_m
    (68) identifier -> . IDENTIFIER
    (41) expression_m -> . expression_e
    (42) expression_m -> . expression_m sign expression_e
    (56) expression_e -> . identifier
    (57) expression_e -> . integer
    (58) expression_e -> . float
    (59) expression_e -> . string
    (60) expression_e -> . bool
    (61) expression_e -> . array
    (62) expression_e -> . LPAREN expression RPAREN
    (63) expression_e -> . NOT expression
    (64) expression_e -> . function_call
    (65) expression_e -> . array_call
    (69) integer -> . INTEGER
    (70) float -> . FLOAT
    (71) string -> . STRING
    (72) bool -> . BOOL
    (73) array -> . LBRACKET_S expression RBRACKET_S
    (66) function_call -> . identifier LPAREN param_list RPAREN
    (67) array_call -> . identifier LBRACKET_S expression RBRACKET_S

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    $end            reduce using rule 25 (statement -> .)
    LBRACKET        shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    RETURN          shift and go to state 24
    IDENTIFIER      shift and go to state 7
    LPAREN          shift and go to state 32
    NOT             shift and go to state 33
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    BOOL            shift and go to state 39
    LBRACKET_S      shift and go to state 21

  ! IDENTIFIER      [ reduce using rule 25 (statement -> .) ]

    body                           shift and go to state 9
    statement                      shift and go to state 10
    statement_part                 shift and go to state 11
    local_variable_declaration     shift and go to state 12
    assignment_statement           shift and go to state 13
    array_def                      shift and go to state 14
    if_statement                   shift and go to state 15
    while_statement                shift and go to state 16
    return_statement               shift and go to state 17
    expression                     shift and go to state 18
    identifier                     shift and go to state 20
    expression_m                   shift and go to state 25
    expression_e                   shift and go to state 26
    integer                        shift and go to state 27
    float                          shift and go to state 28
    string                         shift and go to state 29
    bool                           shift and go to state 30
    array                          shift and go to state 31
    function_call                  shift and go to state 34
    array_call                     shift and go to state 35

state 6

    (8) function_declaration -> identifier . COLON type LPAREN parameter_list RPAREN SEMICOLON
    (5) variable_declaration -> identifier . COLON type SEMICOLON
    (6) variable_declaration -> identifier . COLON type ASSIGNMENT expression SEMICOLON
    (9) function_heading -> identifier . COLON type LPAREN parameter_list RPAREN

    COLON           shift and go to state 40


state 7

    (68) identifier -> IDENTIFIER .

    COLON           reduce using rule 68 (identifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 68 (identifier -> IDENTIFIER .)
    LBRACKET_S      reduce using rule 68 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 68 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 68 (identifier -> IDENTIFIER .)
    DIV             reduce using rule 68 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 68 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 68 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 68 (identifier -> IDENTIFIER .)
    EQUAL           reduce using rule 68 (identifier -> IDENTIFIER .)
    NEQUAL          reduce using rule 68 (identifier -> IDENTIFIER .)
    LT              reduce using rule 68 (identifier -> IDENTIFIER .)
    LTE             reduce using rule 68 (identifier -> IDENTIFIER .)
    GT              reduce using rule 68 (identifier -> IDENTIFIER .)
    GTE             reduce using rule 68 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 68 (identifier -> IDENTIFIER .)
    AND             reduce using rule 68 (identifier -> IDENTIFIER .)
    OR              reduce using rule 68 (identifier -> IDENTIFIER .)
    RBRACKET_S      reduce using rule 68 (identifier -> IDENTIFIER .)
    LBRACKET        reduce using rule 68 (identifier -> IDENTIFIER .)
    IF              reduce using rule 68 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 68 (identifier -> IDENTIFIER .)
    RETURN          reduce using rule 68 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 68 (identifier -> IDENTIFIER .)
    NOT             reduce using rule 68 (identifier -> IDENTIFIER .)
    INTEGER         reduce using rule 68 (identifier -> IDENTIFIER .)
    FLOAT           reduce using rule 68 (identifier -> IDENTIFIER .)
    STRING          reduce using rule 68 (identifier -> IDENTIFIER .)
    BOOL            reduce using rule 68 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 68 (identifier -> IDENTIFIER .)
    $end            reduce using rule 68 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 68 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 68 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 68 (identifier -> IDENTIFIER .)


state 8

    (1) definition_sequence -> definition definition_sequence .

    $end            reduce using rule 1 (definition_sequence -> definition definition_sequence .)


state 9

    (7) function_declaration -> function_heading body .

    IDENTIFIER      reduce using rule 7 (function_declaration -> function_heading body .)
    $end            reduce using rule 7 (function_declaration -> function_heading body .)


state 10

    (26) body -> statement .

    IDENTIFIER      reduce using rule 26 (body -> statement .)
    $end            reduce using rule 26 (body -> statement .)
    ELSE            reduce using rule 26 (body -> statement .)
    LBRACKET        reduce using rule 26 (body -> statement .)
    IF              reduce using rule 26 (body -> statement .)
    WHILE           reduce using rule 26 (body -> statement .)
    RETURN          reduce using rule 26 (body -> statement .)
    LPAREN          reduce using rule 26 (body -> statement .)
    NOT             reduce using rule 26 (body -> statement .)
    INTEGER         reduce using rule 26 (body -> statement .)
    FLOAT           reduce using rule 26 (body -> statement .)
    STRING          reduce using rule 26 (body -> statement .)
    BOOL            reduce using rule 26 (body -> statement .)
    LBRACKET_S      reduce using rule 26 (body -> statement .)
    RBRACKET        reduce using rule 26 (body -> statement .)


state 11

    (17) statement -> statement_part .

    IDENTIFIER      reduce using rule 17 (statement -> statement_part .)
    $end            reduce using rule 17 (statement -> statement_part .)
    LBRACKET        reduce using rule 17 (statement -> statement_part .)
    IF              reduce using rule 17 (statement -> statement_part .)
    WHILE           reduce using rule 17 (statement -> statement_part .)
    RETURN          reduce using rule 17 (statement -> statement_part .)
    LPAREN          reduce using rule 17 (statement -> statement_part .)
    NOT             reduce using rule 17 (statement -> statement_part .)
    INTEGER         reduce using rule 17 (statement -> statement_part .)
    FLOAT           reduce using rule 17 (statement -> statement_part .)
    STRING          reduce using rule 17 (statement -> statement_part .)
    BOOL            reduce using rule 17 (statement -> statement_part .)
    LBRACKET_S      reduce using rule 17 (statement -> statement_part .)
    RBRACKET        reduce using rule 17 (statement -> statement_part .)
    ELSE            reduce using rule 17 (statement -> statement_part .)


state 12

    (18) statement -> local_variable_declaration .

    IDENTIFIER      reduce using rule 18 (statement -> local_variable_declaration .)
    $end            reduce using rule 18 (statement -> local_variable_declaration .)
    LBRACKET        reduce using rule 18 (statement -> local_variable_declaration .)
    IF              reduce using rule 18 (statement -> local_variable_declaration .)
    WHILE           reduce using rule 18 (statement -> local_variable_declaration .)
    RETURN          reduce using rule 18 (statement -> local_variable_declaration .)
    LPAREN          reduce using rule 18 (statement -> local_variable_declaration .)
    NOT             reduce using rule 18 (statement -> local_variable_declaration .)
    INTEGER         reduce using rule 18 (statement -> local_variable_declaration .)
    FLOAT           reduce using rule 18 (statement -> local_variable_declaration .)
    STRING          reduce using rule 18 (statement -> local_variable_declaration .)
    BOOL            reduce using rule 18 (statement -> local_variable_declaration .)
    LBRACKET_S      reduce using rule 18 (statement -> local_variable_declaration .)
    RBRACKET        reduce using rule 18 (statement -> local_variable_declaration .)
    ELSE            reduce using rule 18 (statement -> local_variable_declaration .)


state 13

    (19) statement -> assignment_statement .

    IDENTIFIER      reduce using rule 19 (statement -> assignment_statement .)
    $end            reduce using rule 19 (statement -> assignment_statement .)
    LBRACKET        reduce using rule 19 (statement -> assignment_statement .)
    IF              reduce using rule 19 (statement -> assignment_statement .)
    WHILE           reduce using rule 19 (statement -> assignment_statement .)
    RETURN          reduce using rule 19 (statement -> assignment_statement .)
    LPAREN          reduce using rule 19 (statement -> assignment_statement .)
    NOT             reduce using rule 19 (statement -> assignment_statement .)
    INTEGER         reduce using rule 19 (statement -> assignment_statement .)
    FLOAT           reduce using rule 19 (statement -> assignment_statement .)
    STRING          reduce using rule 19 (statement -> assignment_statement .)
    BOOL            reduce using rule 19 (statement -> assignment_statement .)
    LBRACKET_S      reduce using rule 19 (statement -> assignment_statement .)
    RBRACKET        reduce using rule 19 (statement -> assignment_statement .)
    ELSE            reduce using rule 19 (statement -> assignment_statement .)


state 14

    (20) statement -> array_def .

    IDENTIFIER      reduce using rule 20 (statement -> array_def .)
    $end            reduce using rule 20 (statement -> array_def .)
    LBRACKET        reduce using rule 20 (statement -> array_def .)
    IF              reduce using rule 20 (statement -> array_def .)
    WHILE           reduce using rule 20 (statement -> array_def .)
    RETURN          reduce using rule 20 (statement -> array_def .)
    LPAREN          reduce using rule 20 (statement -> array_def .)
    NOT             reduce using rule 20 (statement -> array_def .)
    INTEGER         reduce using rule 20 (statement -> array_def .)
    FLOAT           reduce using rule 20 (statement -> array_def .)
    STRING          reduce using rule 20 (statement -> array_def .)
    BOOL            reduce using rule 20 (statement -> array_def .)
    LBRACKET_S      reduce using rule 20 (statement -> array_def .)
    RBRACKET        reduce using rule 20 (statement -> array_def .)
    ELSE            reduce using rule 20 (statement -> array_def .)


state 15

    (21) statement -> if_statement .

    IDENTIFIER      reduce using rule 21 (statement -> if_statement .)
    $end            reduce using rule 21 (statement -> if_statement .)
    LBRACKET        reduce using rule 21 (statement -> if_statement .)
    IF              reduce using rule 21 (statement -> if_statement .)
    WHILE           reduce using rule 21 (statement -> if_statement .)
    RETURN          reduce using rule 21 (statement -> if_statement .)
    LPAREN          reduce using rule 21 (statement -> if_statement .)
    NOT             reduce using rule 21 (statement -> if_statement .)
    INTEGER         reduce using rule 21 (statement -> if_statement .)
    FLOAT           reduce using rule 21 (statement -> if_statement .)
    STRING          reduce using rule 21 (statement -> if_statement .)
    BOOL            reduce using rule 21 (statement -> if_statement .)
    LBRACKET_S      reduce using rule 21 (statement -> if_statement .)
    RBRACKET        reduce using rule 21 (statement -> if_statement .)
    ELSE            reduce using rule 21 (statement -> if_statement .)


state 16

    (22) statement -> while_statement .

    IDENTIFIER      reduce using rule 22 (statement -> while_statement .)
    $end            reduce using rule 22 (statement -> while_statement .)
    LBRACKET        reduce using rule 22 (statement -> while_statement .)
    IF              reduce using rule 22 (statement -> while_statement .)
    WHILE           reduce using rule 22 (statement -> while_statement .)
    RETURN          reduce using rule 22 (statement -> while_statement .)
    LPAREN          reduce using rule 22 (statement -> while_statement .)
    NOT             reduce using rule 22 (statement -> while_statement .)
    INTEGER         reduce using rule 22 (statement -> while_statement .)
    FLOAT           reduce using rule 22 (statement -> while_statement .)
    STRING          reduce using rule 22 (statement -> while_statement .)
    BOOL            reduce using rule 22 (statement -> while_statement .)
    LBRACKET_S      reduce using rule 22 (statement -> while_statement .)
    RBRACKET        reduce using rule 22 (statement -> while_statement .)
    ELSE            reduce using rule 22 (statement -> while_statement .)


state 17

    (23) statement -> return_statement .

    IDENTIFIER      reduce using rule 23 (statement -> return_statement .)
    $end            reduce using rule 23 (statement -> return_statement .)
    LBRACKET        reduce using rule 23 (statement -> return_statement .)
    IF              reduce using rule 23 (statement -> return_statement .)
    WHILE           reduce using rule 23 (statement -> return_statement .)
    RETURN          reduce using rule 23 (statement -> return_statement .)
    LPAREN          reduce using rule 23 (statement -> return_statement .)
    NOT             reduce using rule 23 (statement -> return_statement .)
    INTEGER         reduce using rule 23 (statement -> return_statement .)
    FLOAT           reduce using rule 23 (statement -> return_statement .)
    STRING          reduce using rule 23 (statement -> return_statement .)
    BOOL            reduce using rule 23 (statement -> return_statement .)
    LBRACKET_S      reduce using rule 23 (statement -> return_statement .)
    RBRACKET        reduce using rule 23 (statement -> return_statement .)
    ELSE            reduce using rule 23 (statement -> return_statement .)


state 18

    (24) statement -> expression . SEMICOLON
    (40) expression -> expression . and_or expression_m
    (43) and_or -> . AND
    (44) and_or -> . OR

    SEMICOLON       shift and go to state 41
    AND             shift and go to state 43
    OR              shift and go to state 44

    and_or                         shift and go to state 42

state 19

    (14) statement_part -> LBRACKET . statement_sequence RBRACKET
    (15) statement_sequence -> . statement statement_sequence
    (16) statement_sequence -> . statement
    (17) statement -> . statement_part
    (18) statement -> . local_variable_declaration
    (19) statement -> . assignment_statement
    (20) statement -> . array_def
    (21) statement -> . if_statement
    (22) statement -> . while_statement
    (23) statement -> . return_statement
    (24) statement -> . expression SEMICOLON
    (25) statement -> .
    (14) statement_part -> . LBRACKET statement_sequence RBRACKET
    (31) local_variable_declaration -> . identifier COLON type ASSIGNMENT expression SEMICOLON
    (32) assignment_statement -> . identifier ASSIGNMENT expression SEMICOLON
    (33) assignment_statement -> . identifier LBRACKET_S expression RBRACKET_S ASSIGNMENT expression SEMICOLON
    (34) array_def -> . identifier COLON type SEMICOLON
    (35) if_statement -> . IF expression body ELSE body
    (36) if_statement -> . IF expression body
    (37) while_statement -> . WHILE expression body
    (38) return_statement -> . RETURN expression SEMICOLON
    (39) expression -> . expression_m
    (40) expression -> . expression and_or expression_m
    (68) identifier -> . IDENTIFIER
    (41) expression_m -> . expression_e
    (42) expression_m -> . expression_m sign expression_e
    (56) expression_e -> . identifier
    (57) expression_e -> . integer
    (58) expression_e -> . float
    (59) expression_e -> . string
    (60) expression_e -> . bool
    (61) expression_e -> . array
    (62) expression_e -> . LPAREN expression RPAREN
    (63) expression_e -> . NOT expression
    (64) expression_e -> . function_call
    (65) expression_e -> . array_call
    (69) integer -> . INTEGER
    (70) float -> . FLOAT
    (71) string -> . STRING
    (72) bool -> . BOOL
    (73) array -> . LBRACKET_S expression RBRACKET_S
    (66) function_call -> . identifier LPAREN param_list RPAREN
    (67) array_call -> . identifier LBRACKET_S expression RBRACKET_S

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for LBRACKET_S resolved as shift
    RBRACKET        reduce using rule 25 (statement -> .)
    LBRACKET        shift and go to state 19
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    RETURN          shift and go to state 24
    IDENTIFIER      shift and go to state 7
    LPAREN          shift and go to state 32
    NOT             shift and go to state 33
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    BOOL            shift and go to state 39
    LBRACKET_S      shift and go to state 21

  ! LBRACKET        [ reduce using rule 25 (statement -> .) ]
  ! IF              [ reduce using rule 25 (statement -> .) ]
  ! WHILE           [ reduce using rule 25 (statement -> .) ]
  ! RETURN          [ reduce using rule 25 (statement -> .) ]
  ! IDENTIFIER      [ reduce using rule 25 (statement -> .) ]
  ! LPAREN          [ reduce using rule 25 (statement -> .) ]
  ! NOT             [ reduce using rule 25 (statement -> .) ]
  ! INTEGER         [ reduce using rule 25 (statement -> .) ]
  ! FLOAT           [ reduce using rule 25 (statement -> .) ]
  ! STRING          [ reduce using rule 25 (statement -> .) ]
  ! BOOL            [ reduce using rule 25 (statement -> .) ]
  ! LBRACKET_S      [ reduce using rule 25 (statement -> .) ]
